--- a/manifests/overlays/local/kustomization.yaml
+++ b/manifests/overlays/local/kustomization.yaml
@@ -2,14 +2,19 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubeflow
 resources:
-  - ../../base/
-  - namespace.yaml
+- ../../base/
+- namespace.yaml
 images:
-  - name: kubeflow/training-operator
-    newTag: "latest"
+- name: kubeflow/training-operator
+  newName: kubeflow/training-operator
+  newTag: latest
 secretGenerator:
-  - name: training-operator-webhook-cert
-    options:
-      disableNameSuffixHash: true
+- name: training-operator-webhook-cert
+  options:
+    disableNameSuffixHash: true
 patches:
-  - delete_webhook_patch.yaml
+- path: validating_webhook_patch.yaml
+  target:
+    group: admissionregistration.k8s.io
+    kind: ValidatingWebhookConfiguration
+    version: v1
